--- a/notebooks/likelihood_tests.ipynb
+++ b/notebooks/likelihood_tests.ipynb
@@ -642,7 +642,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.signal"
+    "import scipy.signal\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -671,8 +673,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samplesA = np.random.choice(len(distributionA[1]),100000, p = distributionA[1])\n",
-    "samplesB = np.random.choice(len(distributionB[1]),100000, p = distributionB[1])"
+    "samplesA = np.random.choice(len(distributionA[1]),1000, p = distributionA[1])\n",
+    "samplesB = np.random.choice(len(distributionB[1]),1000, p = distributionB[1])"
    ]
   },
   {
@@ -703,6 +705,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "kwargs = dict(\n",
+    "    range=[x[0],x[-1]], alpha =0.5, bins = len(x))\n",
+    "pdf_A, _, _ = plt.hist(samplesA, **kwargs)\n",
+    "pdf_B, _, _ = plt.hist(samplesB, **kwargs)\n",
+    "for _d in [distributionA, distributionB]:\n",
+    "    _d[1] = _d[1]/np.sum(_d[1])\n",
+    "    plt.plot(*_d)\n",
+    "\n",
+    "prod = distributionA[1] * distributionB[1]\n",
+    "# prod = prod/np.sum(prod)\n",
+    "plt.plot(prod, linestyle = '-.')\n",
+    "\n",
+    "prod_hist = pdf_A*pdf_B\n",
+    "# prod_hist = prod_hist/np.sum(prod_hist)\n",
+    "plt.plot(np.sqrt(prod_hist))\n",
+    "plt.xlim(30,80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -722,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
