update likelihood plotting

--- a/notebooks/likelihood_tests.ipynb
+++ b/notebooks/likelihood_tests.ipynb
@@ -633,7 +633,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combine posteriors"
+    "# Combine posteriors\n",
+    "1D\n"
    ]
   },
   {
@@ -701,27 +702,405 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2D"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kwargs = dict(\n",
-    "    range=[x[0],x[-1]], alpha =0.5, bins = len(x))\n",
-    "pdf_A, _, _ = plt.hist(samplesA, **kwargs)\n",
-    "pdf_B, _, _ = plt.hist(samplesB, **kwargs)\n",
-    "for _d in [distributionA, distributionB]:\n",
-    "    _d[1] = _d[1]/np.sum(_d[1])\n",
-    "    plt.plot(*_d)\n",
+    "import numpy as np\n",
+    "x, y = np.meshgrid(np.linspace(-1,1,10), np.linspace(-1,1,10))\n",
+    "d = np.sqrt(x*x+y*y)\n",
+    "sigma, mu = 1.0, 0.0\n",
+    "g = np.exp(-( (d-mu)**2 / ( 2.0 * sigma**2 ) ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H , xedges, yedges = np.histogram2d(x,y)\n",
+    "X, Y = np.meshgrid(xedges, yedges)\n",
+    "plt.pcolormesh(X, Y, H.T)\n",
+    "ax = plt.gca()\n",
+    "ax.set_aspect('equal')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hist2d(samples, **histargs):\n",
+    "    x,y = samples[:,0], samples[:,1]\n",
+    "    H , xedges, yedges = np.histogram2d(x,y, **histargs)\n",
+    "    X, Y = np.meshgrid(xedges, yedges)\n",
+    "    plt.pcolormesh(X, Y, H.T)\n",
+    "    ax = plt.gca()\n",
+    "    ax.set_aspect('equal')\n",
+    "    return H, xedges, yedges\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samplesA,samplesB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "histargs = dict(\n",
+    "    range = [[0,10], [0,10]],bins = [50,50])\n",
+    "samplesA = np.random.multivariate_normal([6,6], [[2,1],[6,3]], 500000)\n",
+    "HA, xe, ye = hist2d(samplesA, **histargs)\n",
+    "plt.show()\n",
+    "plt.hist2d(samplesA[:,0], samplesA[:,1], **histargs)\n",
+    "ax = plt.gca()\n",
+    "ax.set_aspect('equal')\n",
     "\n",
-    "prod = distributionA[1] * distributionB[1]\n",
-    "# prod = prod/np.sum(prod)\n",
-    "plt.plot(prod, linestyle = '-.')\n",
+    "# plt.show()\n",
+    "# plt.show()\n",
+    "# plt.xlim(*bin_range[0]), plt.ylim(*bin_range[1])#, plt.show()\n",
     "\n",
-    "prod_hist = pdf_A*pdf_B\n",
-    "# prod_hist = prod_hist/np.sum(prod_hist)\n",
-    "plt.plot(np.sqrt(prod_hist))\n",
-    "plt.xlim(30,80)"
+    "# samplesB = np.random.multivariate_normal([3,3], [[1,-1],[-1,2]], 1000000)\n",
+    "# HB, xe, ye = hist2d(samplesB, **histargs)\n",
+    "# plt.xlim(*bin_range[0]), plt.ylim(*bin_range[1])#, plt.show()\n",
+    "\n",
+    "# hist2d(np.concatenate([samplesA, samplesB]), **histargs)\n",
+    "# plt.show()\n",
+    "# X, Y = np.meshgrid(xe, ye)\n",
+    "# plt.pcolormesh(X, Y, HA*HB)\n",
+    "# ax = plt.gca()\n",
+    "# ax.set_aspect('equal')\n",
+    "# plt.show()\n",
+    "# # plt.imshow(np.multiply(histA, histB).T, extent=[*bin_range[0], *bin_range[1]])\n",
+    "# # ax = plt.gca()\n",
+    "# # ax.set_aspect('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bin_center(xedges, yedges):\n",
+    "    return 0.5 * (xedges[0:-1] + xedges[1:]), 0.5 * (yedges[0:-1] + yedges[1:])\n",
+    "X, Y = bin_center(xe, ye)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X, Y = np.meshgrid(xe, ye)\n",
+    "\n",
+    "# X, Y, Z = X[:-1,:-1], Y[:-1,:-1], HA*HB\n",
+    "# # plt.colorbar()\n",
+    "Z = HA*HB\n",
+    "Z = Z/np.max(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from numpy import ma\n",
+    "from matplotlib import colors, ticker, cm\n",
+    "from matplotlib.mlab import bivariate_normal\n",
+    "\n",
+    "N = 100\n",
+    "x = np.linspace(-3.0, 3.0, N)\n",
+    "y = np.linspace(-2.0, 2.0, N)\n",
+    "\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "\n",
+    "z = (bivariate_normal(X, Y, 0.1, 0.2, 1.0, 1.0)\n",
+    "     + 0.1 * bivariate_normal(X, Y, 1.0, 1.0, 0.0, 0.0))\n",
+    "\n",
+    "z = ma.masked_where(z <= 0, z)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "from matplotlib.colors import LogNorm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours = plt.contour(X, Y, Z, levels=[0.1,0.68], colors=['blue','black'])\n",
+    "from matplotlib.colors import LogNorm\n",
+    "# plt.clabel(contours, inline=True, fontsize=8)\n",
+    "\n",
+    "plt.imshow(Z,  extent=[0, 10, 0, 10], origin='lower', norm=LogNorm(), \n",
+    "           cmap='viridis', alpha = 1)\n",
+    "plt.colorbar();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prod = histA * histB\n",
+    "plt.imshow(prod, extent=[*bin_range[0], *bin_range[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "prodx = []\n",
+    "for i in range(len(histA)):\n",
+    "    print(i)\n",
+    "    prodx.append(histA.T[i]*1)\n",
+    "    plt.plot(histA[i])#/np.sum(histA[i]))\n",
+    "    plt.show()\n",
+    "#     plt.plot(histB[i])#/np.sum(histB[i]))\n",
+    "#     plt.show()\n",
+    "#     plt.plot(prodx[i]/np.sum(prodx[i]))\n",
+    "#     plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(prodx, extent=[*bin_range[0], *bin_range[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(histA.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "hist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x,y = samplesA[:,0], samplesA[:,1]\n",
+    "hist, _, _ = np.histogram2d(x,y)\n",
+    "plt.imshow(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import kdestats as kde\n",
+    "# import numpy as np\n",
+    "# import pylab as py\n",
+    "\n",
+    "# covmat = [[1., 1.5], [1.5, 4.]]\n",
+    "# xy = np.random.multivariate_normal([0, 0], covmat, [1e4])\n",
+    "# kdehist = kde.kdehist2(xy[:,0], xy[:,1], [30, 30])\n",
+    "# clevels = kde.confmap(kdehist[0], [.6827,.9545,.9973])\n",
+    "\n",
+    "# py.figure()  # Plot 1-, 2-, and 3-sigma contours\n",
+    "# c = py.contour(kdehist[1], kdehist[2], kdehist[0], clevels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdestats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist, x ,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weighted_avg_and_std(values, weights):\n",
+    "    \"\"\"\n",
+    "    Return the weighted average and standard deviation.\n",
+    "\n",
+    "    values, weights -- Numpy ndarrays with the same shape.\n",
+    "    \"\"\"\n",
+    "    average = np.average(values, weights=weights)\n",
+    "    # Fast and numerically precise:\n",
+    "    variance = np.average((values-average)**2, weights=weights)\n",
+    "    return (average, np.sqrt(variance))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist, x, y = hist, *bin_center(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighted_avg_and_std(x[0][:-1], np.sum(hist, axis =0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(hist, axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.statsmodels.stats.weightstats import DescrStatsW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??sns.kdeplot"
    ]
   },
   {
@@ -748,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
