--- a/notebooks/final_results.ipynb
+++ b/notebooks/final_results.ipynb
@@ -59,6 +59,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "_mask = df['config_nlive'] == 2000\n",
+    "np.sum(_mask)\n",
+    "df[_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +145,87 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def save_canvas(name, save_dir = './figures'):\n",
+    "    dddm.check_folder_for_file(save_dir + '/.')\n",
+    "    dddm.check_folder_for_file(save_dir + '/pdf/.')\n",
+    "    if os.path.exists(save_dir) and os.path.exists(save_dir + '/pdf'):\n",
+    "        plt.savefig(f\"{save_dir}/{name}.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "        plt.savefig(f\"{save_dir}/pdf/{name}.pdf\", dpi=300, bbox_inches=\"tight\")\n",
+    "    else:\n",
+    "        raise FileExistsError( f'{save_dir} does not exist or does not have /pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def plot_check_compare(to_check, name_base, show = True):\n",
+    "    for l, its in enumerate(to_check):\n",
+    "        print(its)\n",
+    "        for k, it in enumerate(its):\n",
+    "            one_confidence_plot(it, corner=False, save_dir='figures/misc/')\n",
+    "            plt.grid(axis='y')\n",
+    "\n",
+    "            name = f'set{l}_sub{k}_' + name_base\n",
+    "            save_canvas(name, save_dir = f'figures/{name_base}/')\n",
+    "            if show: plt.show()\n",
+    "            else: plt.clf()\n",
+    "        if len(its):\n",
+    "            overlay_confidence_plots(its, nsigma = 2)# , save_dir='figures/misc/')\n",
+    "            plt.grid(axis='y')\n",
+    "            name = f'set{l}_' + name_base\n",
+    "            save_canvas(name, save_dir = f'figures/{name_base}/')\n",
+    "            if show: plt.show()\n",
+    "            else: plt.clf()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_check_combine(to_check, name_base, show = True):\n",
+    "    for l, its in enumerate(to_check):\n",
+    "        print(its)\n",
+    "        for k, it in enumerate(its):\n",
+    "            one_confidence_plot(it, corner=False, save_dir='figures/misc/')\n",
+    "            plt.grid(axis='y')\n",
+    "\n",
+    "            name = f'set{l}_sub{k}_' + name_base\n",
+    "            save_canvas(name, save_dir = f'figures/{name_base}/')\n",
+    "            if show: plt.show()\n",
+    "            else: plt.clf()\n",
+    "        \n",
+    "        # Combine plots 0 and 1: the two Ge components of the Ge-detector\n",
+    "        plt.figure(figsize=(12,6))\n",
+    "        three_confidence_plot(its[:2])\n",
+    "        name = f'set{l}_sub{k+1}_' + name_base\n",
+    "        save_canvas(name, save_dir = f'figures/{name_base}/')\n",
+    "        if show: plt.show()\n",
+    "        else: plt.clf()\n",
+    "                \n",
+    "        # Overlay combined plot        \n",
+    "        if len(its):\n",
+    "            plt.figure(figsize=(10,6))\n",
+    "            two_confidence_plot(its[:2],nsigma =2)#,  save_dir='figures/misc/')\n",
+    "            \n",
+    "            # Plot the Xe-dataset\n",
+    "            for k, i in enumerate(its):\n",
+    "                if k<2: continue\n",
+    "                _one_confidence_plot(i, smoothing=True, nsigma=3, nbins = 200, \n",
+    "                                     cmap = [cm.viridis, cm.gnuplot2_r, cm.gist_heat][k])\n",
+    "            plt.grid(axis='y')\n",
+    "            name = f'set{l}_' + name_base\n",
+    "            save_canvas(name)\n",
+    "            if show: plt.show()\n",
+    "            else: plt.clf()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,6 +321,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_check_compare(to_check, 'shielding_any')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_check_compare(to_check_biggest, 'shielding')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Look at the matches where the cross-section is the biggeest\n",
     "for its in to_check_biggest:\n",
     "    for it in its:\n",
@@ -244,14 +355,14 @@
    },
    "outputs": [],
    "source": [
-    "# Or have a look at a random selection of arbitrary cross-sections\n",
-    "random_set = np.random.randint(0,len(to_check))\n",
-    "# for its in to_check:\n",
-    "for its in to_check[random_set:random_set+1]:\n",
-    "    for it in its:\n",
-    "        one_confidence_plot(it, corner=False)\n",
-    "        plt.grid(axis='y')\n",
-    "        plt.show()"
+    "# # Or have a look at a random selection of arbitrary cross-sections\n",
+    "# random_set = np.random.randint(0,len(to_check))\n",
+    "# # for its in to_check:\n",
+    "# for its in to_check[random_set:random_set+1]:\n",
+    "#     for it in its:\n",
+    "#         one_confidence_plot(it, corner=False)\n",
+    "#         plt.grid(axis='y')\n",
+    "#         plt.show()"
    ]
   },
   {
@@ -314,51 +425,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "for its in to_check_lowest:\n",
-    "    print(its)\n",
-    "    for it in its:\n",
-    "        one_confidence_plot(it, corner=False)\n",
-    "        plt.grid(axis='y')\n",
-    "        plt.show()\n",
-    "    if len(its):\n",
-    "        overlay_confidence_plots(its)\n",
-    "        plt.show()"
+    "plot_check_compare(to_check_lowest, 'astrph_lowest')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Or have a look at a random selection of arbitrary cross-sections\n",
-    "random_set = np.random.randint(0,len(to_check))\n",
-    "# for its in to_check:\n",
-    "for its in to_check[random_set:random_set+1]:\n",
-    "    print(its)\n",
-    "    for it in its:\n",
-    "        one_confidence_plot(it, corner=False)\n",
-    "        plt.grid(axis='y')\n",
-    "#         plt.xlim(-.2, 0.2)\n",
-    "#         plt.ylim(-36.5, -35.5)\n",
+    "# plot a random set\n",
+    "# random_set = np.random.randint(0,len(to_check))\n",
+    "# plot_check_compare(to_check[random_set:random_set+1], 'random_astrph')\n",
     "\n",
-    "        plt.show()\n",
-    "    if len(its):\n",
-    "        plt.figure(figsize=(10,6))\n",
-    "        for k, i in enumerate(its):\n",
-    "            _one_confidence_plot(i, smoothing=True, nsigma=3, nbins = 200, cmap = [cm.viridis, cm.gnuplot2_r][k])\n",
-    "#         plt.xlim(-.2, 0.2)\n",
-    "#         plt.ylim(-36.5, -35.5)\n",
-    "        plt.grid(axis='y')\n",
-    "\n",
-    "        plt.show()"
+    "# or plot all sets\n",
+    "plot_check_compare(to_check, 'any_astrph', show = False)"
    ]
   },
   {
@@ -434,36 +520,135 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Or have a look at a random selection of arbitrary cross-sections\n",
-    "random_set = np.random.randint(0,len(to_check))\n",
-    "for its in to_check:\n",
-    "# for its in [[167, 37, 113]]:\n",
-    "# for its in to_check[random_set:random_set+1]:\n",
-    "    print('-----------------------------------------------------------------------------')\n",
-    "    print(its)\n",
-    "    for it in its:\n",
-    "        one_confidence_plot(it, corner=False)\n",
-    "        plt.grid(axis='y')\n",
-    "        plt.show()\n",
-    "    plt.figure(figsize=(12,6))\n",
-    "    three_confidence_plot(its[:2])\n",
-    "    \n",
-    "    if len(its) == 3:\n",
-    "        plt.figure(figsize=(10,6))\n",
-    "        two_confidence_plot(its[:2],nsigma =2)\n",
+    "plot_check_combine(to_check, 'ge_vs_xe', show = False)\n",
     "\n",
-    "        for k, i in enumerate(its):\n",
-    "            if k<2: continue\n",
-    "            _one_confidence_plot(i, smoothing=True, nsigma=3, nbins = 200, cmap = [cm.viridis, cm.gnuplot2_r,\n",
-    "                                                                                  cm.gist_heat][k])\n",
-    "        plt.grid(axis='y')\n",
-    "\n",
-    "        plt.show()"
+    "# # Or have a look at a random selection of arbitrary cross-sections\n",
+    "# random_set = np.random.randint(0,len(to_check))\n",
+    "# plot_check_combine(to_check[random_set:random_set+1], 'random_ge_vs_xe')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -489,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
