--- a/notebooks/load_results-multinest.ipynb
+++ b/notebooks/load_results-multinest.ipynb
@@ -43,11 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tol in np.unique(df['tol'].values):\n",
-    "    if not np.isnan(tol):\n",
-    "        print(tol, \n",
-    "              np.mean(df['config_fit_time'][df['tol']==tol]).astype(np.int), \n",
-    "              np.std(df['config_fit_time'][df['tol']==tol]).astype(np.int))"
+    "# for tol in np.unique(df['tol'].values):\n",
+    "#     if not np.isnan(tol):\n",
+    "#         print(tol, \n",
+    "#               np.mean(df['config_fit_time'][df['tol']==tol]).astype(np.int), \n",
+    "#               np.std(df['config_fit_time'][df['tol']==tol]).astype(np.int))"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
