--- a/notebooks/load_results-multinest.ipynb
+++ b/notebooks/load_results-multinest.ipynb
@@ -25,7 +25,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head(5)"
+    "print(df.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(5).to_csv('test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_read = pd.read_csv('test.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(df_read) == np.shape(df.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(5)[0:1]"
    ]
   },
   {
